--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="home_tab_live">直播</string>
     <string name="home_tab_learn">学习圈</string>
     <string name="home_tab_mine">我的</string>
+    <string name="qr_code">二维码</string>
 </resources>
