--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
+    <!--common-->
     <string name="app_name">小教室</string>
+    <string name="cancel">取消</string>
+    <string name="ok">确定</string>
+    <string name="finish">完成</string>
+
     <string name="home_tab_index">首页</string>
     <string name="home_tab_live">直播</string>
     <string name="home_tab_learn">学习圈</string>
