--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="home_tab_learn">学习圈</string>
     <string name="home_tab_mine">我的</string>
     <string name="qr_code">二维码</string>
+    <string name="home_search_hint">搜索直播课或机构或人</string>
 </resources>
