头像裁剪模块

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="cancel">取消</string>
     <string name="ok">确定</string>
     <string name="finish">完成</string>
+    <string name="save">保存</string>
+    <string name="rotate">旋转</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_live">直播</string>
