--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,14 +20,16 @@
     <string name="verify_code_send_hint">发送验证码</string>
     <string name="verity_code_countdown">%1$sS后可重发</string>
     <string name="verity_code_re_send">重发验证码</string>
-    <string name="pwd_hint">请输入6-16位密码</string>
+    <string name="pwd_hint">请输入6&#8211;16位密码</string>
     <string name="register">注册</string>
     <string name="register_protocol">《小教室用户注册协议》</string>
     <string name="register_protocol_agree">点击注册默认您同意</string>
-    <string name="phone_input_empty">请输入手机号</string>
-    <string name="phone_input_error">请输入正确的手机号</string>
-    <string name="phone_verify_empty">请输入验证码</string>
-    <string name="phone_verify_error">请输入正确验证码</string>
-    <string name="phone_pwd_empty">请输入密码</string>
-    <string name="phone_pwd_error">密码少于6位</string>
+    <string name="name_empty">请输入手机号</string>
+    <string name="phone_empty">请输入手机号</string>
+    <string name="phone_error">请输入正确的手机号</string>
+    <string name="verify_empty">请输入验证码</string>
+    <string name="verify_error">请输入正确验证码</string>
+    <string name="pwd_empty">请输入密码</string>
+    <string name="pwd_error">密码少于6位</string>
+    <string name="register_failure">密码少于6位</string>
 </resources>
