--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,12 +24,12 @@
     <string name="register">注册</string>
     <string name="register_protocol">《小教室用户注册协议》</string>
     <string name="register_protocol_agree">点击注册默认您同意</string>
-    <string name="name_empty">请输入手机号</string>
+    <string name="name_empty">请输用户名</string>
     <string name="phone_empty">请输入手机号</string>
     <string name="phone_error">请输入正确的手机号</string>
     <string name="verify_empty">请输入验证码</string>
     <string name="verify_error">请输入正确验证码</string>
     <string name="pwd_empty">请输入密码</string>
     <string name="pwd_error">密码少于6位</string>
-    <string name="register_failure">密码少于6位</string>
+    <string name="register_failure">注册失败</string>
 </resources>
