--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,17 @@
     <string name="home_tab_mine">我的</string>
     <string name="qr_code">二维码</string>
     <string name="home_search_hint">搜索直播课或机构或人</string>
+
+    <string name="course_of_learn">我学的课</string>
+    <string name="course_of_teach">我授的课</string>
+    <string name="my_course">我的课</string>
+    <string name="cls_moment">班级圈</string>
+    <string name="into_cls">进入教室</string>
+    <string name="data_bank">资料库</string>
+    <string name="more">更多</string>
+    <string name="speaker">主讲：</string>
+    <string name="prepare_lesson">备课</string>
+    <string name="lesson_again">再次开课</string>
+    <string name="look_detail">查看详情</string>
+    <string name="invite">邀请</string>
 </resources>
