我的页面ui调整

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,10 +45,19 @@
     <string name="fans">粉丝</string>
     <string name="follows">关注</string>
     <string name="collections">收藏</string>
+    <string name="my_course_duration">课时</string>
+    <string name="course_credit">学分</string>
     <string name="my_account">我的账户</string>
+    <string name="recharge">充值</string>
+    <string name="withdrawals">提现</string>
     <string name="my_page">我的主页</string>
+    <string name="my_course_mine_page">我的课</string>
+    <string name="my_course_schedule">我的课程</string>
+    <string name="my_ask_questions">我的提问</string>
+    <string name="my_collections">我的收藏</string>
     <string name="eval_management">评价管理</string>
     <string name="teach_ability">教学能力</string>
+    <string name="feedback_help">反馈与帮助</string>
     <string name="system_notify">系统通知</string>
     <string name="name_verify">实名认证</string>
     <string name="get_more_right">可享更多权益</string>
