--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="hour">小时</string>
     <string name="minute">分钟</string>
     <string name="charge">收费</string>
+    <string name="name">姓名</string>
+    <string name="sex">性别</string>
+    <string name="birthday">生日</string>
+    <string name="male">男</string>
+    <string name="female">女</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_live">直播</string>
@@ -63,8 +68,12 @@
     <string name="get_more_right">可享更多权益</string>
     <string name="settings">设置</string>
     <string name="recommend_to_friends">推荐给好友</string>
-    <!--mine sub page-->
+    <!--my sub page-->
     <string name="exit_login">退出当前账号</string>
+    <!--my profile-->
+    <string name="my_profile">我的资料</string>
+    <string name="edit_portrait">编辑头像</string>
+    <string name="personalized_sign">个性签名</string>
 
     <string name="home_search_hint">搜索直播课或机构或人</string>
     <string name="course_of_learn">我学的课</string>
