首页新增中间按钮点击效果、优化我的课界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,7 @@
     <string name="lesson_again">再次开课</string>
     <string name="look_detail">查看详情</string>
     <string name="invite">邀请</string>
-
+    <string name="filter">筛选</string>
+    <string name="time">时间</string>
+    <string name="course_state">开课状态</string>
 </resources>
