数据选择器（生日和普通数据）

--- a/3d_wheelpicker/src/main/res/values/strings.xml
+++ b/3d_wheelpicker/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="year">年</string>
-    <string name="month">月</string>
-    <string name="day">日</string>
+    <string name="_year">年</string>
+    <string name="_month">月</string>
+    <string name="_day">日</string>
 </resources>
