主页修改，我的课的修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="filter">筛选</string>
     <string name="time">时间</string>
     <string name="course_state">开课状态</string>
+    <string name="my_xiaojs">我的小教室</string>
 </resources>
