--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="cancel">取消</string>
     <string name="ok">确定</string>
     <string name="finish">完成</string>
+    <string name="search">搜索</string>
     <string name="save">保存</string>
     <string name="rotate">旋转</string>
     <string name="phone_num">手机号</string>
@@ -90,7 +91,7 @@
     <string name="speaker">主讲：</string>
     <string name="prepare_lesson">备课</string>
     <string name="lesson_again">再次开课</string>
-    <string name="look_detail">查看详情</string>
+    <string name="look_detail">查看</string>
     <string name="invite">邀请</string>
 
     <!--course creation-->
