--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,9 @@
     <string name="filter">筛选</string>
     <string name="time">时间</string>
     <string name="course_state">开课状态</string>
+
+    <string name="lession_detail">课程详情</string>
+    <string name="lession_apply">立即报名</string>
+    <string name="consulting">咨询</string>
+    <string name="pay_now">下单并付款</string>
 </resources>
