--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,4 +165,5 @@
     <string name="recommend_self">推荐自己</string>
     <string name="competitive_course_recommend">精品课推荐</string>
     <string name="make_interest">定制兴趣</string>
+    <string name="free">免费</string>
 </resources>
