我要开课接入接口数据

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="birthday">生日</string>
     <string name="male">男</string>
     <string name="female">女</string>
+    <string name="edit">编辑</string>
     <string name="please_select">请选择</string>
     <string name="please_set">请设置</string>
     <string name="please_input">请填写</string>
@@ -118,26 +119,38 @@
     <string name="live_course_name">直播课名称</string>
     <string name="subject_category">学科类目</string>
     <string name="teach_form">教学形式</string>
-    <string name="teach_form_open">公开课</string>
+    <string name="teach_form_lecture">公开课</string>
     <string name="teach_form_one2one">一对一</string>
-    <string name="teach_form_more2one">多人小班</string>
-    <string name="enroll_way">报名方式</string>
-    <string name="enroll_online">线上报名</string>
-    <string name="enroll_offline">线下报名</string>
-    <string name="by_live_total_price">按直播总价</string>
+    <string name="teach_form_one2many">多人小班</string>
+    <string name="enroll_mandatory">需要报名</string>
+    <string name="by_live_total_price">按总价</string>
     <string name="by_live_duration">按课时</string>
     <string name="enroll_people_limit">报名限制人数</string>
     <string name="course_start_time">上课时间</string>
     <string name="course_duration">上课时长</string>
     <string name="optional_info">选填信息</string>
+    <string name="optional_info_tips">封面、课程简介、老师结束等</string>
     <string name="on_shelves">立即上架</string>
-    <string name="live_course_name_hint">请输入4&#8211;25字</string>
+    <string name="live_course_name_hint">请输入%1$d&#8211;%2$d字</string>
     <string name="subject_category_hint">请选择学科类目</string>
     <string name="teach_form_hint">请选择教学模式</string>
-    <string name="enroll_way_hint">设置你的课程是否需要报名才能参加(可多选)</string>
+    <string name="enroll_hint">开启后，学生需要报名才能参加直播课</string>
     <string name="course_start_time_hint">请选择上课时间</string>
-    <string name="optional_info_hint">请选择上课时间</string>
-    <string name="on_shelves_tips">上架后该课的详情将公开在您的个人主页中</string>
+    <string name="other_settings">其他设置</string>
+    <string name="on_shelves_tips">上架后，学生才可以报名直播课</string>
+    <string name="publish_personal_page">发布到个人主页</string>
+    <string name="publish_personal_page_tips">在个人主页中展示，才可以分享</string>
+    <string name="live_course_name_error">请输入%1$d&#8211;%2$d个字的直播课名称</string>
+    <string name="subject_empty">请选择学科类目</string>
+    <string name="teach_form_empty">请选择教学形式</string>
+    <string name="enroll_people_empty">请填写报名人数</string>
+    <string name="enroll_people_must_be_positive">报名人数必须大于0</string>
+    <string name="enroll_people_must_be_less_than">报名人数不能多于%1$d人</string>
+    <string name="charge_must_be_checked">请选择收费模式</string>
+    <string name="course_start_time_empty">请选择上课时间</string>
+    <string name="course_duration_empty">请填写上课时长</string>
+    <string name="course_duration_must_be_less_than">上课时长不能多于%1$s分钟</string>
+    <string name="sale_promotion_set">促销设置</string>
 
     <string name="filter">筛选</string>
     <string name="time">时间</string>
