--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,5 @@
     <string name="pending_for_course">待上课</string>
     <string name="living">上课中</string>
     <string name="course_stu">已报名&#160;%1$d/%2$d</string>
+    <string name="shelves_need_examine">您提交的上架申请正在审核中，请耐心等待</string>
 </resources>
