--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,8 @@
     <string name="get_more_right">可享更多权益</string>
     <string name="settings">设置</string>
     <string name="recommend_to_friends">推荐给好友</string>
+    <string name="my_profile_txt">为自己写一句个性签名，让被人更了解你</string>
+
     <!--my sub page-->
     <string name="exit_login">退出当前账号</string>
     <!--my profile-->
@@ -98,7 +100,7 @@
     <string name="audit_visible_to_stu">旁听对学生可见</string>
     <string name="audit_people">旁听人</string>
     <string name="sale_promotion">促销</string>
-    <string name="input_tips">%1$d/%2$d字</string>
+    <string name="input_tips"><![CDATA[<font color="#cc0000">%1$d</font>]]>/%2$d字</string>
 
     <string name="home_search_hint">直播课/老师/机构</string>
     <string name="course_of_learn">我学的课</string>
@@ -166,6 +168,7 @@
     <string name="promotion_info_error">请完整填写促销%1$d信息</string>
     <string name="promotion_discount_format_error">请填写正确的折扣值，如：9.7</string>
     <string name="promotion_info_empty">请填写促销信息</string>
+    <string name="lesson_creation_success">创建直播课成功</string>
 
     <!--live lesson detail-->
     <string name="live_lesson_detail">直播课详情</string>
