修改提示信息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="get_more_right">可享更多权益</string>
     <string name="settings">设置</string>
     <string name="recommend_to_friends">推荐给好友</string>
-    <string name="my_profile_txt">为自己写一句个性签名，让被人更了解你</string>
+    <string name="my_profile_txt">为自己写一句个性签名，让别人更了解你</string>
 
     <!--my sub page-->
     <string name="exit_login">退出当前账号</string>
