首页我的==添加我的报名入口

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="my_page">我的主页</string>
     <string name="my_course_mine_page">我的课</string>
     <string name="my_course_schedule">我的课程</string>
+    <string name="my_enrollment">我的报名</string>
     <string name="my_ask_questions">我的提问</string>
     <string name="my_collections">我的收藏</string>
     <string name="eval_management">评价管理</string>
