--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
     <string name="register_protocol">《小教室用户注册协议》</string>
     <string name="register_protocol_agree">点击注册默认您同意</string>
     <string name="name_empty">请输入姓名</string>
+    <string name="name_length_less_than_2">请输入至少2个字的姓名</string>
+    <string name="name_length_more_than_16">请输入少于16字的姓名</string>
     <string name="phone_empty">请输入手机号</string>
     <string name="phone_error">请输入正确的手机号</string>
     <string name="verify_empty">请输入验证码</string>
@@ -73,7 +75,7 @@
     <string name="course_credit">学分</string>
     <string name="my_account">我的账户</string>
     <string name="recharge">充值</string>
-    <string name="withdrawals">提现</string>
+    <string name="withdrawals">我要提现</string>
     <string name="my_page">我的主页</string>
     <string name="my_course_mine_page">我的课</string>
     <string name="my_course_schedule">我的课程</string>
