替换pulltorefreshlist的库，增加左滑删除模版，调整AbsSwipeAdapter的封装逻辑。 修改bug: 108 #1-首页，消息列表中，向左滑动无法删除信息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="reload">重新加载</string>
     <string name="load_failed_tip">数据加载失败</string>
     <string name="load_failed_tip_2">请确保您的手机已连网</string>
+    <string name="mark">标记为已读</string>
 
     <string name="home_tab_index">首页</string>
     <string name="home_tab_circle">小圈</string>
